--- a/.github/workflows/hf_update.yml
+++ b/.github/workflows/hf_update.yml
@@ -33,5 +33,5 @@ jobs:
         run: |
           git remote add hf https://huggingface.co/spaces/${{ secrets.HF_USERNAME }}/${{ secrets.HF_SPACENAME }}  # Aggiungi il remoto Hugging Face
           git fetch hf  # Recupera i cambiamenti dal repository remoto di Hugging Face
-          git merge hf/main --allow-unrelated-histories  # Unisci i cambiamenti (se necessario)
-          git push https://${{ secrets.HF_USERNAME }}:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/${{ secrets.HF_USERNAME }}/${{ secrets.HF_SPACENAME }} main  # Fai il push sul repository di Hugging Face
+          git reset --hard hf/main  # Resetta la tua branch locale a quella remota (sovrascrive le modifiche locali)
+          git push --force https://${{ secrets.HF_USERNAME }}:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/${{ secrets.HF_USERNAME }}/${{ secrets.HF_SPACENAME }} main  # Fai il push forzato sul repository di Hugging Face
