--- a/.github/workflows/hf_update.yml
+++ b/.github/workflows/hf_update.yml
@@ -10,15 +10,22 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
       - name: Set up Git for Hugging Face Repo
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-        
+
       - name: Clone Hugging Face Space repository
         run: |
           git clone https://huggingface.co/spaces/${{ secrets.HF_USERNAME }}/${{ secrets.HF_SPACENAME }}
-          cd ${{ secrets.HF_SPACENAME }}
+          cd ${{ secrets.HF_SPACENAME }}  # Cambia directory dentro del repository clonato
+
+      - name: Check git status
+        run: |
+          git status  # Controlla lo stato del repository per vedere se ci sono modifiche non tracciate
 
       - name: Append timestamp to Updates file
         run: |
@@ -30,16 +37,20 @@ jobs:
         run: |
           git log --oneline  # Visualizza i commit locali per vedere se il commit è stato creato
 
-      - name: Check git status
+      - name: Check if there are changes to commit
         run: |
-          git status  # Controlla se ci sono modifiche locali da fare il commit
+          git diff --quiet || echo "Changes detected"  # Verifica se ci sono modifiche
 
       - name: Check current branch
         run: |
           git branch  # Verifica il ramo attuale
 
-      - name: Push changes to Hugging Face Space
+      - name: Fetch changes from Hugging Face Space repository
         run: |
           git remote add hf https://huggingface.co/spaces/${{ secrets.HF_USERNAME }}/${{ secrets.HF_SPACENAME }}  # Aggiungi il remoto Hugging Face
           git fetch hf  # Recupera i cambiamenti dal repository remoto di Hugging Face
-          git push --force https://${{ secrets.HF_USERNAME }}:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/${{ secrets.HF_USERNAME }}/${{ secrets.HF_SPACENAME }} main  # Fai il push forzato sul repository di Hugging Face
+
+      - name: Merge changes and push
+        run: |
+          git merge hf/main --strategy=recursive --strategy-option=theirs  # Risolvi conflitti mantenendo le modifiche remote
+          git push https://${{ secrets.HF_USERNAME }}:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/${{ secrets.HF_USERNAME }}/${{ secrets.HF_SPACENAME }} main  # Fai il push sul repository di Hugging Face
