--- a/.github/workflows/updatedomain.yml
+++ b/.github/workflows/updatedomain.yml
@@ -1,54 +1,68 @@
-name: Trigger Rebuild on Hugging Face Space
+name: Update Domains
 on:
+  schedule:
+    - cron: "0 8 * * *"  # Esegui alle 08:00 ogni giorno
+  workflow_dispatch:      # Permette di avviare manualmente il workflow
   push:
-    branches:
-      - main  # o il ramo che vuoi
+    branches:    
+      - '**'         # matches every branch 
+      
 jobs:
-  rebuild:
+  update-domains:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Set up Git for Hugging Face Repo
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
         
-      - name: Clone and update Hugging Face Space repository
-        run: |
-          git clone https://huggingface.co/spaces/${{ secrets.HF_USERNAME }}/${{ secrets.HF_SPACENAME }}
-          cd ${{ secrets.HF_SPACENAME }}
-          
-          # Crea il file Updates se non esiste
-          touch Updates
-          
-          # Appende il timestamp al file Updates
-          echo "$(date)" >> Updates
-          
-          # Forza un rebuild senza cache creando/modificando un file dummy
-          echo "# REBUILD_TIMESTAMP: $(date)" > .rebuild_trigger
-          
-          # Modifica il Dockerfile per forzare il pull dell'ultimo commit
-          if [ -f "Dockerfile" ]; then
-            # Rimuovi eventuali righe di timestamp precedenti
-            sed -i '/^# REBUILD_TIMESTAMP:/d' Dockerfile
-            sed -i '/^# CACHE_BUST:/d' Dockerfile
-            
-            # Aggiungi una variabile cache-bust prima del git clone
-            sed -i '/^RUN git clone/i# CACHE_BUST: '"$(date +%s)" Dockerfile
-            
-            # Modifica il comando git clone per assicurarsi di prendere l'ultimo commit
-            sed -i 's|RUN git clone https://github.com/strek392/MMM.git .|RUN git clone https://github.com/strek392/MMM.git . \&\& git pull origin main|' Dockerfile
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12'
+        
+    - name: Install dependencies
+      run: |
+        pip install requests
+        
+    - name: Update domains in config.json
+      run: |
+        python update_domains.py
+        
+    - name: Commit and push changes to all branches
+      run: |
+        git config --global user.email "your-email@example.com"
+        git config --global user.name "Your Name"
+        
+        # Ottieni lista di tutti i branch remoti senza il prefisso "origin/"
+        git fetch --all
+        BRANCHES=$(git branch -r | grep -v '\->' | sed 's/origin\///')
+    
+        for branch in $BRANCHES
+        do
+          echo "Processing branch: $branch"
+    
+          # Controlla se il branch esiste localmente, altrimenti crealo
+          if git rev-parse --verify "$branch"; then
+            git checkout $branch
+          else
+            git checkout -b $branch origin/$branch
           fi
-          
-          # Controlla se ci sono modifiche da committare
-          if git diff --quiet && git diff --staged --quiet; then
-            echo "Nessuna modifica da committare"
-            exit 0
+    
+          # Effettua il pull con rebase per evitare conflitti
+          git pull --rebase origin $branch || (echo "Rebase fallito, tentando un merge" && git pull origin $branch --no-rebase)
+    
+          # Esegui lo script per aggiornare config.json
+          python update_domains.py
+    
+          # Verifica se ci sono modifiche
+          if git diff --exit-code config.json; then
+            echo "No changes in config.json for branch $branch"
+          else
+            git add config.json
+            git commit -m "Aggiornamento domini in config.json"
+            git push origin $branch
           fi
-          
-          # Aggiungi e committa le modifiche
-          git add Updates Dockerfile .rebuild_trigger
-          git commit -m "Force rebuild - Update timestamp $(date)"
-          
-          # Push delle modifiche a Hugging Face
-          git push https://${{ secrets.HF_USERNAME }}:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/${{ secrets.HF_USERNAME }}/${{ secrets.HF_SPACENAME }} main
+        done
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
