--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "Siti": {
         "StreamingCommunity": {
-            "url": "https://streamingunity.bid",
+            "url": "https://streamingunity.art",
             "SC_ForwardProxy": "0",
             "SC_PROXY": "0",
             "VX_ForwardProxy": "0",
@@ -48,7 +48,7 @@
             "enabled": "1"
         },
         "Guardaserie": {
-            "url": "https://guardaserietv.blog",
+            "url": "https://guardaserietv.icu",
             "enabled": "1",
             "GS_ForwardProxy": "0",
             "GS_PROXY": "1"
