--- a/.github/workflows/updatedomain.yml
+++ b/.github/workflows/updatedomain.yml
@@ -66,3 +66,7 @@ jobs:
         done
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  trigger-rebuild:
+    needs: update-domains
+    uses: ./.github/workflows/hf_update.yml
+     
