--- a/config.json
+++ b/config.json
@@ -66,13 +66,13 @@
             "OST_PROXY": "0"
         },
         "AnimeWorld": {
-            "url": "https://www.animeworld.ac",
+            "url": "https://onlineserietv.com",
             "enabled": "1",
             "AW_ForwardProxy": "0",
             "AW_PROXY": "1"
         },
         "SkyStreaming": {
-            "url": "https://skystreaming.yoga",
+            "url": "https://www.animeworld.ac",
             "enabled": "1"
         },
         "DaddyLiveHD": {
