--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
             "enabled": "1"
         },
         "Tantifilm": {
-            "url": "https://www.tantifilm.agency",
+            "url": "https://www.tantifilm.locker",
             "TF_ForwardProxy": "0",
             "TF_PROXY": "1",
             "enabled": "1"
@@ -48,7 +48,7 @@
             "enabled": "1"
         },
         "Guardaserie": {
-            "url": "https://guardaserietv.qpon",
+            "url": "https://guardaserietv.cc",
             "enabled": "1",
             "GS_ForwardProxy": "0",
             "GS_PROXY": "1"
